# django-orca

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  pre-commit-sync-db.json
.github/workflows/: test.yaml  test.yml
django_orca/: __init__.py  admin.py  apps.py  models.py  registry.py  roles.py  shortcuts.py  utils.py  views.py
django_orca/auth/: backend.py  checkers.py  getters.py  mixins.py  setters.py
django_orca/migrations/: 0001_initial.py
django_orca/rest_framework/: filters.py
docs/: views.md
example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/main/: admin.py  apps.py  fixtures.py  models.py  roles.py  views.py
example_project/main/migrations/: 0001_initial.py  0002_department_course.py  0003_school_department_school.py  0004_honorscourse.py
example_project/main/tests/: conftest.py  factories.py  test_backend.py  test_getters.py  test_inheritance.py  test_permissions.py  test_setters.py  test_views.py
example_project/templates/: base_page.html  index.html
example_project/templates/main/: course_detail.html  department_detail.html
scripts/: gen_ref_pages.py
src/django_orca/: apps.py  exceptions.py  models.py  registry.py  roles.py  shortcuts.py  utils.py  views.py
src/django_orca/auth/: backend.py  checkers.py  getters.py  mixins.py  setters.py
src/django_orca/migrations/: 0001_initial.py  0002_userrole_django_orca_role_cl_3e0010_idx_and_more.py
