[tool.poetry]
name = "django-orca"
version = "0.0.1"
description = "A role-based access control backend for django"
license = "BSD-3-Clause"
authors = ["Josh Asplund <asplund3@illinois.edu>"]
readme = "README.md"
packages = [
    {include = "django_orca", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">4.0"
djangorestframework = { version = "^3.13.0", optional = true}

[tool.poetry.extras]
drf = ["djangorestframework"]

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"
mypy = "*"
mypy-extensions = "*"
django-stubs = "*"
django-extensions = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-factoryboy = "*"
rope = "*"
pyparsing = "*"
pydot = "*"
black = "*"
django-migration-linter = "*"
pre-commit = "*"
nplusone = "*"
django-heavy-water = {git = "https://github.com/uiuc-csid/django-heavy-water.git", rev = "main"}
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit2"
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov-report html --cov-report xml --cov"

[tool.mypy]
python_version = 3.9
plugins = ["mypy_django_plugin.main"]

allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true

# Django migrations should not produce any errors:
[[tool.mypy.overrides]]
module = [
    "example_project.core.migrations",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "example_project.settings"

[tool.coverage.run]
branch = true
source = [
    "django_orca"
]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/fixtures.py",
    "*/management/commands/*",
]

[tool.coverage.html]
directory = "tmp/htmlcov"

[tool.coverage.xml]
output = "tmp/coverage.xml"

[tool.ruff]
select = ["E", "F", "I", "DJ", "TD", "D"]
target-version = "py311"
ignore = ["E501", "TD003", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
